Remove checks for cursor being in scrolling region, ncurses doesn't do checking, rather just scrolls the scrolling region so we shall follow suit.  SUSv2 says what is happens when scrl is called with the cursor outside the scrolling is undefined so we should match ncurses. This fixes PR#51819 without forcing tin to use terminfo directly.